--- a/index.html
+++ b/index.html
@@ -1,13 +1,31 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>CHANGE ME</title>
+    <title>my website</title>
   </head>
 
   <body>
     <!-- All content goes here -->
     <div id="all-contents">
+    <nav>
+
+    </nav> 
+    <main>
+<!--Sidebar section -->
+<div class="--Sidebar">
+</div>
+  <!--Content section-->
+<div class="content">
+  <h2>Daron Kinchen</h2>
+  <p>Student at Livingston Collegiate</p>
+  <div id="intrests">
+    <h3>Interests</h3>
+    <ul>
       
+    </ul>
+  </div>
+</div>
+     </main> 
     </div>
   </body>
 </html>
