--- a/portfolio.html
+++ b/portfolio.html
@@ -9,13 +9,14 @@
     <!-- All content goes here -->
     <div id="all-contents">
       <nav>
-<h1>Your Name's Amazing Website</h1>
+<h1>Daron's Website</h1>
 <ul id="nav-ul">
-<li class="nav-li">
+
     <li class="nav-li">
   <a href="index.html">Home</a>
 </li>
-  <a href="portfolio.html">Portfolio</a>
+ <li class="nav-li">
+<a href="portfolio.html">Portfolio</a>
 </li>
 </ul>
   </nav>
